<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="#d6e6f7"
    android:layout_height="match_parent"
    tools:context=".AppointBook">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/d2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/book_an_appointment"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/pat_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape"
            android:hint="@string/enter_patient_name"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/mobnum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape"
            android:hint="@string/enter_mobile_number"
            android:inputType="number"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape"
            android:hint="@string/address"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/disease"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape"
            android:hint="@string/disease"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/bookappoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/book_appointment"
            android:layout_margin="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16dp"/>
    </LinearLayout>

</ScrollView>